k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iamafli-service
spec:
  selector:
    app: iamafli
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
